[gd_scene load_steps=11 format=3 uid="uid://2l53iqdxctbl"]

[ext_resource type="Script" path="res://Scenes/MainScenes/game.gd" id="1_s360q"]
[ext_resource type="PackedScene" uid="uid://xxodqh3mc4r7" path="res://Scenes/Maps/Map01.tscn" id="2_4n37u"]
[ext_resource type="Script" path="res://Scenes/MainScenes/UI.gd" id="3_0f01c"]
[ext_resource type="Texture2D" uid="uid://cswc2pqtu10we" path="res://Assets/UI/Coin22.png" id="4_44leb"]
[ext_resource type="Texture2D" uid="uid://bqxu5u7qgtax" path="res://Assets/UI/Heart copy.png" id="5_x5f6v"]
[ext_resource type="Texture2D" uid="uid://cvdj1lsij4uy1" path="res://Assets/UI/arrow-play.png" id="6_4gfaw"]
[ext_resource type="Texture2D" uid="uid://cs645oo0ondvs" path="res://Assets/Towers/Knight/Faceset-small.png" id="6_autww"]
[ext_resource type="Texture2D" uid="uid://jmo3v7bgdy2c" path="res://Assets/UI/pause.png" id="7_8ye5f"]
[ext_resource type="Texture2D" uid="uid://c0f68t51k5ans" path="res://Assets/Towers/Mage/Faceset-small.png" id="7_fp22v"]
[ext_resource type="Texture2D" uid="uid://8w34ugrxg7xh" path="res://Assets/UI/arrow-fastfoward.png" id="8_s0xh8"]

[node name="game" type="Node2D"]
script = ExtResource("1_s360q")

[node name="Map01" parent="." instance=ExtResource("2_4n37u")]

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource("3_0f01c")

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_stretch_ratio = 0.0

[node name="InfoBar" type="VBoxContainer" parent="UI/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = -5

[node name="Money" type="HBoxContainer" parent="UI/HUD/MarginContainer/VBoxContainer/InfoBar"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="UI/HUD/MarginContainer/VBoxContainer/InfoBar/Money"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12

[node name="TextureRect" type="TextureRect" parent="UI/HUD/MarginContainer/VBoxContainer/InfoBar/Money"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_44leb")
stretch_mode = 4

[node name="Life" type="HBoxContainer" parent="UI/HUD/MarginContainer/VBoxContainer/InfoBar"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="UI/HUD/MarginContainer/VBoxContainer/InfoBar/Life"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 12

[node name="TextureRect" type="TextureRect" parent="UI/HUD/MarginContainer/VBoxContainer/InfoBar/Life"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 1.1
texture = ExtResource("5_x5f6v")
stretch_mode = 2

[node name="GridContainer" type="GridContainer" parent="UI/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Knight" type="TextureButton" parent="UI/HUD/MarginContainer/VBoxContainer/GridContainer" groups=["build_buttons"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.1
texture_normal = ExtResource("6_autww")
stretch_mode = 1

[node name="Mage" type="TextureButton" parent="UI/HUD/MarginContainer/VBoxContainer/GridContainer" groups=["build_buttons"]]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("7_fp22v")
stretch_mode = 1

[node name="Spacing" type="Control" parent="UI/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="UI/HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="PausePlay" type="TextureButton" parent="UI/HUD/MarginContainer/VBoxContainer/Buttons"]
process_mode = 3
layout_mode = 2
toggle_mode = true
texture_normal = ExtResource("6_4gfaw")
texture_pressed = ExtResource("7_8ye5f")

[node name="Fastfoward" type="TextureButton" parent="UI/HUD/MarginContainer/VBoxContainer/Buttons"]
layout_mode = 2
texture_normal = ExtResource("8_s0xh8")

[connection signal="pressed" from="UI/HUD/MarginContainer/VBoxContainer/Buttons/PausePlay" to="UI" method="_on_pause_play_pressed"]
[connection signal="pressed" from="UI/HUD/MarginContainer/VBoxContainer/Buttons/Fastfoward" to="UI" method="_on_fastfoward_pressed"]
